# yc_image_search_api

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
models/: schemas.py
routes/: search.py
services/: yandex_search.py
static/css/: style.css
static/js/: main.js
templates/: index.html
